--- a/pom.xml
+++ b/pom.xml
@@ -4,11 +4,11 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>com.kdyzm.spring</groupId>
-	<artifactId>helloworld</artifactId>
+	<artifactId>spring-source-code-deep-analysis</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
-	<name>helloworld</name>
+	<name>spring-source-code-deep-analysis</name>
 	<url>http://maven.apache.org</url>
 
 	<properties>
